# CREUSE_CINE_PLUS

./: 1_Projet.py  Notebook Final Cleaning.ipynb  Notebook IMDB.ipynb  Notebook.ipynb  Projet.py  README.md  films_groupes.parquet  main.py  pyproject.toml
pages/: 1_Analyses_des_données.py  2_Recommandations.py  3_Fiche_Films.py  3_🎬_Recommandations.py  Data.py  Movies.py
pages/pages/: 2_Data_4_U.py  3_Movies_4_U.py  Data_4_U.py  Movies.py
