[project]
name = "creuse-cine-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas",
    "scikit-learn>=1.7.0",
    "streamlit",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
